--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,12 +13,12 @@ main:
   # - name: Projects
   #   url: '#projects'
   #   weight: 30
-  # - name: Talks
-  #   url: '#talks'
-  #   weight: 40
-  # - name: Publications
-  #   url: '#featured'
-  #   weight: 50
+  - name: Education
+    url: '#education'
+    weight: 40
+  - name: Interests
+    url: '#interests'
+    weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
