--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,42 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Blog
-    url: blog/
-    weight: 20
   - name: Education
     url: '#education'
-    weight: 30
+    weight: 20
   - name: Interests
     url: '#interests'
-    weight: 40
+    weight: 30
   - name: Contact
     url: '#contact'
+    weight: 40
+  - name: Blog
+    url: post/
     weight: 50
 
 
 
+  # - name: Home
+  #   url: '#about'
+  #   weight: 10
+  # - name: Posts
+  #   url: '#posts'
+  #   weight: 20
+  # - name: Projects
+  #   url: '#projects'
+  #   weight: 30
+  # - name: Talks
+  #   url: '#talks'
+  #   weight: 40
+  # - name: Publications
+  #   url: '#featured'
+  #   weight: 50
+  # - name: Contact
+  #   url: '#contact'
+  #   weight: 60
+
+# Link to a PDF of your resume/CV from the menu.
+# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
+#  - name: CV
+#    url: uploads/resume.pdf
+#    weight: 70
