--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,24 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Skills
+    url: '#skills'
+    weight: 20
+  - name: Experience
+    url: '#experience'
+    weight: 30
   - name: Education
     url: '#education'
-    weight: 20
+    weight: 40
   - name: Interests
     url: '#interests'
-    weight: 30
+    weight: 50
   - name: Contact
     url: '#contact'
-    weight: 40
+    weight: 60
   - name: Blog
     url: post/
-    weight: 50
+    weight: 70
 
 
 
