--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,7 +13,7 @@ main:
   - name: Experience
     url: '#experience'
     weight: 30
-  - name: Education
+  - name: Education & Certifications
     url: '#education'
     weight: 40
   - name: Interests
